# StarPulse

./: CLAUDE.md  NeuroSync-Master-Your-Mind-DESIGN.md  README.md  README.zh.md  docker-compose.yml  start-dev.sh
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/ai/agents/: __init__.py
backend/app/ai/services/: __init__.py  placeholder.py
backend/app/api/: admin.py  audit.py  auth.py  change_requests.py  devices.py  health.py  router.py  tasks.py
backend/app/auth/: audit.py  bootstrap.py  constants.py  dependencies.py  password.py  refresh.py  repositories.py  seed.py  tokens.py
backend/app/common/: __init__.py  redaction.py  time.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/devices/: __init__.py  change_requests.py  config_snapshots.py  constants.py  credentials.py  preflight.py  repository.py  service.py
backend/app/netconf/: __init__.py
backend/app/storage/: __init__.py  database.py  models.py  repositories.py
backend/app/tasks/: __init__.py  celery_app.py  jobs.py  service.py  worker.py
backend/scripts/: build_image.sh  init_dev.sh  install_deps.sh  lint.sh  migrate_db.sh  package_local.sh  run_api.sh  start_all.sh  start_deps.sh  test.sh
backend/tests/: conftest.py  test_admin.py  test_audit_log.py  test_auth.py  test_change_requests.py  test_config_snapshots.py  test_devices.py  test_health.py  test_netconf.py  test_netconf_integration.py  test_rbac.py  test_tasks_and_ai.py
frontend/: .gitignore  (+5 more)
(+98 files in other folders)
