[project]
name = "star-pulse-backend"
version = "0.1.0"
description = "Star-Pulse ground management backend foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "celery>=5.3,<6.0",
    "fastapi>=0.110,<1.0",
    "ncclient>=0.6.15,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.3,<1.0",
]

[project.scripts]
star-pulse-api = "app.main:run"
star-pulse-worker = "app.tasks.worker:main"
star-pulse-migrate = "app.storage.database:init_database"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
